--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,183 +1,268 @@
 body {
-    margin: 0;
+  margin: 0;
+  background-image: -webkit-repeating-radial-gradient(center center, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 1px, transparent 1px, transparent 100%);
+  background-image: repeating-radial-gradient(center center, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 1px, transparent 1px, transparent 100%);
+  background-size: 20px 20px;
 }
 
 #sideBar {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background: #222;
-    padding: 5px;
-    width: 200px;
-    height: 100%;
-    position: fixed;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  background: #222;
+  /* padding: 5px; */
+  width: 200px;
+  height: 100%;
+  position: fixed;
+}
+
+#sideBar img {
+  vertical-align: middle;
 }
 
 #sideBar a,
 #sideBar p {
-    display: block;
-    color: #999;
-    text-decoration: none;
-    padding: 20px;
+  display: block;
+  color: #999;
+  text-decoration: none;
+  padding: 20px;
 }
 
 #sideBar a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 #sideBar img {
-    display: block;
-    margin: 20px auto 0 auto;
+  display: block;
+  margin: 20px auto 0 auto;
 }
 
 #main {
-    margin-left: 200px;
+  margin-left: 200px;
+  background-repeat: no-repeat;
 }
 
 #main h1 {
-    margin: 0;
-    font-family: sans-serif;
-    font-weight: lighter;
-    text-align: center;
-    padding: 15px;
+  margin: 0;
+  font-family: sans-serif;
+  font-weight: lighter;
+  text-align: center;
+  padding: 15px;
 }
 
 @media screen and (max-width: 900px) {
-    #sideBar {
-        /* width: 200px; */
-        height: 100%;
-        position: initial;
-        width: 100%;
-    }
-
-    #sideBar a,
-    #sideBar p {
-        display: inline-block;
-        color: #999;
-        text-decoration: none;
-        padding: 20px;
-    }
-
-    #main {
-        margin-left: 0;
-    }
-
-    #sideBar img {
-        display: inline-block;
-        height: 64px;
-        margin: 0 auto 0 20px;
-    }
+  #sideBar {
+    /* width: 200px; */
+    height: 100%;
+    position: initial;
+    width: 100%;
+  }
+  #sideBar a,
+  #sideBar p {
+    display: inline-block;
+    color: #999;
+    text-decoration: none;
+    padding: 20px;
+  }
+  #main {
+    margin-left: 0;
+  }
+  #sideBar img {
+    display: inline-block;
+    height: 64px !important;
+    width: 64px !important;
+    margin: 0 auto 0 20px;
+  }
 }
 
 @media screen and (max-width: 673px) {
+  #sideBar a,
+  #sideBar p {
+    display: block;
+    text-align: center;
+  }
+  #sideBar img {
+    display: block;
+    height: 64px;
+    margin: 0 auto;
+    padding: 10px 0 0 0;
+  }
+  #description img {
+    width: 100%;
+  }
+}
 
-    #sideBar a,
-    #sideBar p {
-        display: block;
-        text-align: center;
-    }
+#description {
+  max-width: 1500px;
+  margin: 0 auto;
+}
 
-    #sideBar img {
-        display: block;
-        height: 64px;
-        margin: 10px auto 0 auto;
-    }
+#bioContainer h1:first-child {
+  color: white;
+}
 
+#bioContainer > * {
+  display: inline-block;
+}
+
+#bioContainer p {
+  display: inline-block;
+  max-width: 400px;
+  text-align: justify;
+  margin: 0 50px;
+  font-size: 18px;
+  color: white;
+}
+
+#bioContainer #deskSetup {
+  width: 400px;
+  height: 500px;
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
+  vertical-align: top;
+}
+
+#descriptionContainer {
+  width: 100%;
+  padding: 0 0 20px 0;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25)), to(#222)), url("/lib/img/3c8e2c317d771e864510aca571613f49.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.25), #222), url("/lib/img/3c8e2c317d771e864510aca571613f49.png");
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 600px;
+}
+
+#altPersonaContainer {
+  background-color: #222;
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#altPersonaContainer img {
+  margin: 20px;
+}
+
+#altPersonaContainer p {
+  margin: 20px 0;
+}
+
+#altPersonaContainer #altPersona {
+  max-width: 1500px;
+  margin: 0 auto;
 }
 
 body {
-    font-family: Arial;
-    margin: 0;
-}
-
-* {
-    box-sizing: border-box;
+  font-family: Arial;
+  margin: 0;
 }
 
 img {
-    vertical-align: middle;
+  vertical-align: top;
 }
 
 /* Position the image container (needed to position the left and right arrows) */
 .container {
-    position: relative;
-    margin: 0 auto;
-    max-width: 1500px;
+  position: relative;
+  margin: 0 auto;
+  max-width: 1500px;
 }
 
 /* Hide the images by default */
 .mySlides {
-    display: none;
+  display: none;
 }
 
 /* Add a pointer when hovering over the thumbnail images */
 .cursor {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Next & previous buttons */
-.prev,
+.prev {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+}
+
 .next {
-    cursor: pointer;
-    position: absolute;
-    top: 40%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 /* Position the "next button" to the right */
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
 /* Container for image text */
 .caption-container {
-    text-align: center;
-    background-color: #222;
-    padding: 2px 16px;
-    color: white;
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
 }
 
 .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* Six columns side by side */
 .column {
-    float: left;
-    width: 16.66%;
+  float: left;
+  width: 16.66%;
 }
 
 /* Add a transparency effect for thumnbail images */
 .demo {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 .active,
 .demo:hover {
-    opacity: 1;
+  opacity: 1;
 }
+
+#footer {
+  min-height: 200px;
+}
+/*# sourceMappingURL=style.css.map */
